# made-of-bits

./: .gitignore  Cargo.toml  LICENSE.md  README.md  TODO.md  bit-structures.bike  build.js  gen.js  morton.js  package-lock.json  package.json  pnpm-lock.yaml  silk.key  tsconfig.json  vite.config.js
benches/: bic.rs  bitvec.rs  huffman_vs_wm.rs  rank1.rs  wavelet_matrix.rs
draft/: EF-Split-Points.nb
old/: build.js  package-lock.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
old/draft/: histogram.js
old/rust-playground/made-of-bits/: README.md
old/rust-playground/made-of-bits/src/: bitblock.rs  bitbuf.rs  bits.rs  js.rs  waveletmatrix.rs  waveletmatrix_support.rs
old/rust-playground/made-of-bits/src/bitvec/: array.rs  mod.rs  multi.rs  test.rs
old/src/: bitbuf.js  bits.test.js  debug.d.ts  densebitvec.js  densebitvec.test.js  huffman.test.js  intbuf.js  intbuf.test.js  introspection.js  rlebitvec.js  sortedarraybitvec.js  sparsebitvec.js  sparsebitvec.test.js  types.d.ts  waveletmatrix.js
old/zig-playground/: silk.cert
old/zig-playground/src/: main.zig
rust-playground/made-of-bits/: Cargo.toml  README.md  justfile
rust-playground/made-of-bits/benches/: rank1.rs
rust-playground/made-of-bits/src/: README.md  bitblock.rs  bitbuf.rs  bits.rs  bitvec.rs  bitvec_test.rs  densebitvec.rs  intbuf.rs  js.rs  lib.rs  multibitvec.rs  rlebitvector.rs  sortedarraybitvec.rs  sortedarraybitvec_js.rs  sparsebitvec.rs  test_bitvec.rs  thingy.rs  waveletmatrix.rs  waveletmatrix_support.rs
rust-playground/made-of-bits/src/bitvec/: array.rs  compressed.rs  dense.rs  mod.rs  multi.rs  quad.rs  rle.rs  sparse.rs  test.rs  zeropadded.rs
rust-playground/made-of-bits/src/bitvecs/: array.rs  dense.rs  mod.rs  multi.rs  rle.rs  sortedarray.rs  sortedarray_js.rs  sparse.rs
rust-playground/made-of-bits/src/zorder/: mod.rs
rust-playground/made-of-bits/test/: index.js
rust-playground/thingy/: mod.rs
src/: assert.js  base64.js  bic.rs  bitbuf.js  bitbuf.rs  bitbuf.test.js  bits.js  bits.rs  bits.test.js  bytesize.rs  compressedbitvec.js  debug.d.ts  debug.js  defaults.js  densebitvec.js  densebitvec.test.js  gen.js  huffman.js  huffman.rs  huffmanwaveletmatrix.rs  index.js  intbuf.js  intbuf.rs  intbuf.test.js  introspection.js  intvec.js  intvec.test.js  lib.rs  multibitvec.js  multibitvec.test.js  rlebitvec.js  rlebitvec.test.js  sort.js  sortedarraybitvec.js  sortedarraybitvec.test.js  sparsebitvec.js  sparsebitvec.test.js  symbol_sequence.rs  test_support.rs  testutils.js  (+5 more)
src/bitvec/: array.rs  dense.rs  mod.rs  multi.rs  onepadded.rs  rle.rs  sparse.rs  test.rs
src/zorder/: mod.rs
zig-playground/: .gitignore  Zig.bike  build.zig  zig-playground.sublime-project
zig-playground/src/: _scrap.zig
