[package]
name = "made-of-bits"
version = "0.1.0"
edition = "2021"

[lib]
name = "made_of_bits"
crate-type = ["cdylib"]

[dependencies]
to_js = { path = "/Users/yurivish/to_js" }

[dev-dependencies]
arbtest = "0.3"
exhaustigen = "0.1"
expect-test = "1.5"
testresult = "0.4.1"
serde = { version = "1.0.204",  features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"

[profile.dev]
opt-level = 3 # all optimizations

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
debug = "line-tables-only"
overflow-checks = true # cf. https://hachyderm.io/@cliffle/111812887172594381

[profile.release-debug]
inherits = "release"
debug-assertions = true
