[package]
name = "made-of-bits"
version = "0.1.0"
edition = "2021"

# CAUTION: Including rlib in this list bloats and pessimizes the binary because it silently disables LTO.
# But it is needed for benchmarking.
# TODO: Figure out a way to benchmark without this unnecessary change.
# One possibility is to use a Justfile that temporarily moves Cargo.toml, creates a stripped-down
# version without the "rlib" option using awk, does a .wasm build, then restores Cargo.toml.
# Issue: https://github.com/rust-lang/rust/issues/51009
[lib]
crate-type = [
  # Build a cdylib to make a `.wasm` library.
  "cdylib",
  # Build an rlib for testing and benching.
  "rlib"
]

[dependencies]
to_js = { path = "/Users/yurivish/to_js" }

[dev-dependencies]
arbtest = "0.3"
exhaustigen = "0.1"
expect-test = "1.5"
testresult = "0.4.1"
serde = { version = "1.0.204",  features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "rank1"
harness = false

[profile.dev]
opt-level = 3 # all optimizations

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
debug = "line-tables-only"
overflow-checks = true # cf. https://hachyderm.io/@cliffle/111812887172594381

[profile.release-debug]
inherits = "release"
debug-assertions = true
