[package]
name = "made-of-bits"
version = "0.1.0"
edition = "2021"

# CAUTION: Including `rlib` in this list silently disables LTO when building with `cargo build`, causing
# a larger (and potentially slower) binary to be built.
#
# Issue: https://github.com/rust-lang/rust/issues/51009
#
# But `rlib` is needed for benchmarking with `cargo bench`.
#
# Workaround: use `cargo rustc` instead of `cargo build` to override the crate type when building the .wasm:
#   RUSTFLAGS='-C target-feature=+simd128' cargo rustc --crate-type cdylib --profile release-debug --target wasm32-unknown-unknown
[lib]
crate-type = [
  # Build a cdylib to make a `.wasm` library.
  "cdylib",
  # Build an rlib for testing and benching.
  "rlib"
]

[dependencies]
to_js = { path = "/Users/yurivish/to_js" }

[dev-dependencies]
arbtest = "0.3"
exhaustigen = "0.1"
expect-test = "1.5"
testresult = "0.4.1"
serde = { version = "1.0.204",  features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "rank1"
harness = false

[profile.dev]
opt-level = 3 # all optimizations

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"
debug = "line-tables-only"
overflow-checks = true # cf. https://hachyderm.io/@cliffle/111812887172594381

[profile.release-debug]
inherits = "release"
debug-assertions = true
